
ChangeLog
   [ + added, - removed, * changed ]

   * (01/Feb/2011) Bug solved: looking for hw signals in PAPI 4.x
   * (21/Jan/2011) AIX support to generate libmpitrace.so without libtool
                   (libtool in AIX does not allow generating shared libraries)
   + (19/Nov/2010) FreeBSD support (examples & --with-libexecinfo)
                   Simplification of example install rules in Makefile.am
                   Change bash  to sh in substitute/substitute-all
   * (18/Nov/2010) Fix: when sorting addresses wipe the address2info cache.
   * (12/Nov/2010) Fixes compilation when struct mallinfo is not available.
                   Fixes compilation if BFD&liberty are not available in the system.
                   Put the EXTRAE_LABELS content at the end of the PCF file.
   * (09/Nov/2010) Tagged Extrae 2.1.1
   * (09/Nov/2010) Bugfix, mpi2prv triead *always* to generate dimemas traces.
                   New -sort-addresses functionality in merger, to sort addresses of
                     MPI callers, user functions and so.
                   Improved XML parsing (env vars & case insensitive)
                   Added aliases to Extrae_* API/fortran
                   Added -fno-optimize-sibling call to avoid unexpected
                     optimizations (we found that sometimes some routines were
                     called directly skipping routines: for example,
                     misc_interface calls did not appear)
                   Simplified behavior with/without -e and with/without BFD
                     support:
                     * no bfd support / no -e / -e and invalid binary,
                       addresses are left unchanged in the trace
                     * -e binary translates addresses to source code through
                       dictionary
   * (20/Oct/2010) added -with-dwarf for dyninst
                   support for upcoming dyninst (post 6.1)