@@ -573,17 +573,17 @@ void NAME_ROUTINE_C2F(mpi_reduce) (void *sendbuf, void *recvbuf, MPI_Fint *count
 	MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_reduce_enter (sendbuf, recvbuf, count, datatype, op, root, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-		MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -622,17 +622,17 @@ void NAME_ROUTINE_C2F(mpi_reduce_scatter) (void *sendbuf, void *recvbuf,
 	MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_reduce_scatter_enter (sendbuf, recvbuf, recvcounts, datatype, op, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-		MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -672,17 +672,17 @@ void NAME_ROUTINE_C2F(mpi_allreduce) (void *sendbuf, void *recvbuf,
 	MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_allreduce_enter (sendbuf, recvbuf, count, datatype, op, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -765,17 +765,17 @@ void NAME_ROUTINE_F(mpi_barrier) (MPI_Fint *comm, MPI_Fint *ierror)
 void NAME_ROUTINE_C2F(mpi_barrier) (MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_barrier_enter (comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -982,17 +982,17 @@ void NAME_ROUTINE_C2F(mpi_bcast) (void *buffer, MPI_Fint *count,
 	MPI_Fint *datatype, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_bcast_enter (buffer, count, datatype, root, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1030,17 +1030,17 @@ void NAME_ROUTINE_C2F(mpi_alltoall) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_alltoall_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1080,17 +1080,17 @@ void NAME_ROUTINE_C2F(mpi_alltoallv) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *rdispls, MPI_Fint *recvtype,	MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_alltoallv_enter (sendbuf, sendcount, sdispls, sendtype, recvbuf, recvcount, rdispls, recvtype, comm, ierror);
 #endif
 
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1130,16 +1130,17 @@ void NAME_ROUTINE_C2F(mpi_allgather) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_allgather_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1179,16 +1180,17 @@ void NAME_ROUTINE_C2F(mpi_allgatherv) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *recvtype, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_allgatherv_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, displs, recvtype, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1228,16 +1230,17 @@ void NAME_ROUTINE_C2F(mpi_gather) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *root, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_gather_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, root, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1276,16 +1279,17 @@ void NAME_ROUTINE_C2F(mpi_gatherv) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *recvtype, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_gatherv_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, displs, recvtype, root, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1324,16 +1328,17 @@ void NAME_ROUTINE_C2F(mpi_scatter) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *root, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_scatter_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, root, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1372,16 +1377,17 @@ void NAME_ROUTINE_C2F(mpi_scatterv) (void *sendbuf, MPI_Fint *sendcount,
 	MPI_Fint *recvtype, MPI_Fint *root, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_scatterv_enter (sendbuf, sendcount, displs, sendtype, recvbuf, recvcount, recvtype, root, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -1784,16 +1790,17 @@ void NAME_ROUTINE_C2F(mpi_scan) (void *sendbuf, void *recvbuf, MPI_Fint *count,
 	MPI_Fint *datatype, MPI_Fint *op, MPI_Fint *comm, MPI_Fint *ierror)
 #endif
 {
-	int sizeofcomm;
+	int result;
 	MPI_Comm c = MPI_Comm_f2c(*comm);
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_mpi_scan_enter (sendbuf, recvbuf, count, datatype, op, comm, ierror);
 #endif
-	PMPI_Comm_size (c, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+
+	PMPI_Comm_compare (MPI_COMM_WORLD, c, &result);
+	if (result == MPI_IDENT || result == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2508,16 +2515,15 @@ int NAME_ROUTINE_C(MPI_Reduce) (void *sendbuf, void *recvbuf, int count,
 	MPI_Datatype datatype, MPI_Op op, int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Reduce_enter (sendbuf, recvbuf, count, datatype, op, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2549,17 +2555,16 @@ int NAME_ROUTINE_C(MPI_Reduce) (void *sendbuf, void *recvbuf, int count,
 int NAME_ROUTINE_C(MPI_Reduce_scatter) (void *sendbuf, void *recvbuf,
 	int *recvcounts, MPI_Datatype datatype, MPI_Op op, MPI_Comm comm)
 {
-	int sizeofcomm;
 	int res;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Reduce_scatter_enter (sendbuf, recvbuf, recvcounts, datatype, op, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2593,16 +2598,15 @@ int NAME_ROUTINE_C(MPI_Allreduce) (void *sendbuf, void *recvbuf, int count,
 	MPI_Datatype datatype, MPI_Op op, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Allreduce_enter (sendbuf, recvbuf, count, datatype, op, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2669,16 +2673,15 @@ int NAME_ROUTINE_C(MPI_Iprobe) (int source, int tag, MPI_Comm comm, int *flag,
 int NAME_ROUTINE_C(MPI_Barrier) (MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Barrier_enter (comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2855,16 +2858,15 @@ int NAME_ROUTINE_C(MPI_Bcast) (void *buffer, int count, MPI_Datatype datatype,
 	int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Bcast_enter (buffer, count, datatype, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2897,16 +2899,15 @@ int NAME_ROUTINE_C(MPI_Alltoall) (void *sendbuf, int sendcount,
 	MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Alltoall_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2941,16 +2942,15 @@ int NAME_ROUTINE_C(MPI_Alltoallv) (void *sendbuf, int *sendcounts, int *sdispls,
 	MPI_Datatype recvtype, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Alltoallv_enter (sendbuf, sendcounts, sdispls, sendtype, recvbuf, recvcounts, rdispls, recvtype, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -2987,16 +2987,15 @@ int NAME_ROUTINE_C(MPI_Allgather) (void *sendbuf, int sendcount,
 	MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Allgather_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3033,16 +3032,15 @@ int NAME_ROUTINE_C(MPI_Allgatherv) (void *sendbuf, int sendcount,
 	MPI_Datatype recvtype, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Allgatherv_enter (sendbuf, sendcount, sendtype, recvbuf, recvcounts, displs, recvtype, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3079,16 +3077,15 @@ int NAME_ROUTINE_C(MPI_Gather) (void *sendbuf, int sendcount,
 	int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Gather_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3125,16 +3122,15 @@ int NAME_ROUTINE_C(MPI_Gatherv) (void *sendbuf, int sendcount,
 	MPI_Datatype recvtype, int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Gatherv_enter (sendbuf, sendcount, sendtype, recvbuf, recvcounts, displs, recvtype, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3171,16 +3167,15 @@ int NAME_ROUTINE_C(MPI_Scatter) (void *sendbuf, int sendcount,
 	int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Scatter_enter (sendbuf, sendcount, sendtype, recvbuf, recvcount, recvtype, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3217,16 +3212,15 @@ int NAME_ROUTINE_C(MPI_Scatterv) (void *sendbuf, int *sendcounts, int *displs,
 	int root, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Scatterv_enter (sendbuf, sendcounts, displs, sendtype, recvbuf, recvcount, recvtype, root, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
 
 		if (CheckForControlFile)
 			CheckControlFile();
@@ -3536,16 +3530,15 @@ int NAME_ROUTINE_C(MPI_Scan) (void *sendbuf, void *recvbuf, int count,
 	MPI_Datatype datatype, MPI_Op op, MPI_Comm comm)
 {
 	int res;
-	int sizeofcomm;
 
 #if defined(ENABLE_LOAD_BALANCING)
 	DLB_MPI_Scan_enter (sendbuf, recvbuf, count, datatype, op, comm);
 #endif
 
-	PMPI_Comm_size (comm, &sizeofcomm);
-	if (sizeofcomm == NumOfTasks)
+	PMPI_Comm_compare (MPI_COMM_WORLD, comm, &res);
+	if (res == MPI_IDENT || res == MPI_CONGRUENT)
 	{
-        MPI_CurrentOpGlobal = (++MPI_NumOpsGlobals);
+		MPI_CurrentOpGlobal = ++MPI_NumOpsGlobals;
 
 		if (CheckForControlFile)
 			CheckControlFile();
