@@ -3,6 +3,7 @@ ChangeLog
    [ + added, - removed, * changed ]
 
    * (01/Feb/2011) Bug solved: looking for hw signals in PAPI 4.x
+                   Change at global operations now uses MPI_Comm_compare
    * (21/Jan/2011) AIX support to generate libmpitrace.so without libtool
                    (libtool in AIX does not allow generating shared libraries)
    + (19/Nov/2010) FreeBSD support (examples & --with-libexecinfo)
